# rust-rocket-web

./: .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml  docker-compose.yml
docker.config/web/: Dockerfile
migrations/2021-12-02-070359_create_users/: up.sql
src/: db.rs  lib.rs  main.rs  schema.rs
src/controllers/: member_controller.rs  mod.rs  top_controller.rs
src/models/: user.rs
src/repositories/: user_repository.rs
src/router/: mod.rs  web.rs
src/templates/: base.html.hbs  index.html.hbs  login.html.hbs  login_receive.html.hbs
