[package]
name = "rust-rocket-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
rocket_contrib = { version = "0.4.10", default-features = false, features = ["handlebars_templates", "tera_templates", "serve", "json"] }
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
warp = "0.2"
thiserror = "1.0"
askama = "0.8"
serde = {version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
diesel = { version = "1.4.8", features = ["mysql", "sqlite", "r2d2", "numeric", "chrono"] }
dotenv = "0.15.0"
bigdecimal = "0.0.14"
